--- a/dev/_footer.html
+++ b/dev/_footer.html
@@ -27,6 +27,33 @@
 </div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="modal fade" id="modal_plan1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal-dialog" role="document">
+		<a href="javascript:;" class="close" data-dismiss="modal" aria-label="Close"></a>
+		<div class="modal-content">
+			<img src="img/big_plan_1.png" alt="">
+		</div>
+	</div>
+</div>
+
+
 <div class="modal fade" id="modal_consult" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	<div class="modal-dialog" role="document">
 		<a href="javascript:;" class="close" data-dismiss="modal" aria-label="Close"></a>
@@ -47,6 +74,42 @@
 		</div>
 	</div>
 </div>
+
+
+
+<div class="modal fade" id="modal_present" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal-dialog" role="document">
+		<a href="javascript:;" class="close" data-dismiss="modal" aria-label="Close"></a>
+		<div class="modal-content">
+			<div class="modal_title">Запись на презентацию</div>
+
+			<div class="form mgb10">
+				<div class="form-control">
+					<input type="text" placeholder="Имя" name="fio">
+				</div>
+				<div class="form-control">
+					<input type="text" placeholder="Телефон" name="phone">
+				</div>
+				<div class="modal_check"><input type="checkbox"> Я согласен на обработку персональных данных*</div>
+			</div>
+
+			<button class="modal_btn">Отправить</button>
+		</div>
+	</div>
+</div>
+
+
+
+
+<div class="modal fade" id="modal_plan2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal-dialog" role="document">
+		<a href="javascript:;" class="close" data-dismiss="modal" aria-label="Close"></a>
+		<div class="modal-content">
+			<img src="img/big_plan_2.png" alt="">
+		</div>
+	</div>
+</div>
+
 
 
 <div class="modal fade" id="modal_ipoteka" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
