--- a/dev/index.html
+++ b/dev/index.html
@@ -516,7 +516,7 @@
 						</label>
 					</div>
 
-					<div class="range_title">Количество спален</div>
+					<!-- <div class="range_title">Количество спален</div>
 					<div class="calc_block__chek mgb20">
 						<label>
 							<input type="radio" name="sleep">
@@ -546,7 +546,7 @@
 							<input type="radio" name="wc">
 							<span class="calc_check">3</span>
 						</label>
-					</div>
+					</div> -->
 
 					<div class="range_title">Кухня-гостиная</div>
 					<div class="calc_block__chek">
