--- a/dev/_header.html
+++ b/dev/_header.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Roboto:300,400,500&amp;subset=cyrillic" rel="stylesheet">
 
