--- a/dev/index.html
+++ b/dev/index.html
@@ -134,7 +134,7 @@
 
 
 
-<div class="l_block l_block-img" id="block2" data-scroll="5">
+<div class="l_block l_block-img" id="block2" data-scroll="2">
 	<div class="wrapper">
 		<h2>Окружение и среда обитания</h2>
 		
@@ -153,7 +153,7 @@
 		    if( elems.length ) {
 		      for ( var i=0; i < elems.length; i++ ) {
 		        var speed = elems[i].getAttribute('data-scroll');
-		        elems[i].style.backgroundPosition = (-window.pageXOffset/speed) + "px " + (200-window.pageYOffset/speed) + "px" ;
+		        elems[i].style.backgroundPosition = (-window.pageXOffset/speed) + "px " + (1000-window.pageYOffset/speed) + "px" ;
 		      }
 		    }
 		    
@@ -401,10 +401,10 @@
 					<img src="img/char1.png" alt="" class="char_list__img">
 					<div class="char_list__title">Электрическая <br>разводка</div>
 					<div class="char_list__back">
-						Электрическая разводка ─ 
-						полная, скрытая, с установкой
-						выключателей и розеток, двухтарифными электрическими счетчиками с автоматическими выключателями. Все приборы учета размещены в местах общего пользования и не занимают 
-						место в вашей квартире.
+						<div class="inside">
+							<span class="underline">Система отопления</span> - радиаторы производства Vogel&Noot, со встроенными клапанами термо-регулятора, счетчики учета расхода тепла.
+						</div>
+						
 						<button class="close"></button>
 					</div>
 				</div>
@@ -412,10 +412,7 @@
 					<img src="img/char2.png" alt="" class="char_list__img">
 					<div class="char_list__title">Вентиляция</div>
 					<div class="char_list__back">
-						Электрическая разводка ─ 
-						полная, скрытая, с установкой
-						выключателей и розеток, двухтарифными электрическими счетчиками с автоматическими выключателями. Все приборы учета размещены в местах общего пользования и не занимают 
-						место в вашей квартире.
+						<div class="inside"><span class="underline">Водоснабжение и водоотведение</span> - магистральные трубопроводы ГВС и ХВС с распределительными коллекторами и счетчиками учета расхода воды проходят в отдельных технологических нишах, размещенных в межквартирных коридорах. <br>Ввод ГВС и ХВС в квартиру осуществляется из межквартирного коридора под потолком.</div>
 						<button class="close"></button>
 					</div>
 				</div>
@@ -423,10 +420,7 @@
 					<img src="img/char3.png" alt="" class="char_list__img">
 					<div class="char_list__title">Водоснабжение <br>и водоотведение</div>
 					<div class="char_list__back">
-						Электрическая разводка ─ 
-						полная, скрытая, с установкой
-						выключателей и розеток, двухтарифными электрическими счетчиками с автоматическими выключателями. Все приборы учета размещены в местах общего пользования и не занимают 
-						место в вашей квартире.
+						<div class="inside"><span class="underline">Электрическая разводка</span> – полная, скрытая, с установкой выключателей и розеток, двух- тарифными электрическими счетчиками с автоматическими выключателями. Все приборы учета размещены в местах общего пользования, не занимая место в вашей квартире.</div>
 						<button class="close"></button>
 					</div>
 				</div>
@@ -434,10 +428,7 @@
 					<img src="img/char4.png" alt="" class="char_list__img">
 					<div class="char_list__title">Система <br>отопления</div>
 					<div class="char_list__back">
-						Электрическая разводка ─ 
-						полная, скрытая, с установкой
-						выключателей и розеток, двухтарифными электрическими счетчиками с автоматическими выключателями. Все приборы учета размещены в местах общего пользования и не занимают 
-						место в вашей квартире.
+						<div class="inside"><span class="underline">Вентиляция</span> – приточно-вытяжная с естественным побуждением и системой микропроветри вания «Airbox». Вентиляционные шахты находятся в «теле» кирпичной кладки.</div>
 						<button class="close"></button>
 					</div>
 				</div>
@@ -445,10 +436,7 @@
 					<img src="img/char5.png" alt="" class="char_list__img">
 					<div class="char_list__title">Кондиционеры</div>
 					<div class="char_list__back">
-						Электрическая разводка ─ 
-						полная, скрытая, с установкой
-						выключателей и розеток, двухтарифными электрическими счетчиками с автоматическими выключателями. Все приборы учета размещены в местах общего пользования и не занимают 
-						место в вашей квартире.
+						<div class="inside"><span class="underline">Кондиционеры</span> – могут быть установлены в шахтах лестнично-лифтового узла на любом из этажей.</div>
 						<button class="close"></button>
 					</div>
 				</div>
