--- a/dev/_header.html
+++ b/dev/_header.html
@@ -71,7 +71,6 @@
 		</div>
 
 		<div class="wrapper">
-
 			<div class="header_top">
 				<div class="row">
 					<div class="col-4 off-4">
@@ -88,10 +87,10 @@
 			</div>
 
 
-			<div class="aligncenter mgb15">
+			<div class="header_btn_wrap header_btn_wrap-1">
 				<a href="javascript: ;" class="header_btn header_btn-green" data-toggle="modal" data-target="#modal_present">Запись на презентацию</a>
 			</div>
-			<div class="aligncenter mgb45">
+			<div class="header_btn_wrap header_btn_wrap-2">
 				<a href="javascript: ;" class="header_btn header_btn-green" data-toggle="modal" data-target="#modal_consult">Консультация специялиста</a>
 			</div>
 
