--- a/dev/index.html
+++ b/dev/index.html
@@ -146,14 +146,17 @@
 	</div>
 
 	<script>
+
 		function backgroundParallax() {
+			var offset = $('.l_block-img').offset().top
+
 		  window.onscroll = function() {
 		    var elems = document.querySelectorAll("[data-scroll]");
 		    
 		    if( elems.length ) {
 		      for ( var i=0; i < elems.length; i++ ) {
 		        var speed = elems[i].getAttribute('data-scroll');
-		        elems[i].style.backgroundPosition = (-window.pageXOffset/speed) + "px " + (1000-window.pageYOffset/speed) + "px" ;
+		        elems[i].style.backgroundPosition = (-window.pageXOffset/speed) + "px " + (offset/2 -window.pageYOffset/speed) + "px" ;
 		      }
 		    }
 		    
@@ -348,6 +351,7 @@
 
 	<div class="l_block-esp__list">
 		<div class="l_block-esp__item">
+			<div class="l_block-esp__title l_block-esp__title-fake">Квартиры с террасами</div>
 			<div class="l_block-esp__item-half">
 				<img src="img/esp1.jpg" alt="" class="l_block-esp__img">
 			</div>
@@ -368,6 +372,7 @@
 		</div>
 
 		<div class="l_block-esp__item">
+			<div class="l_block-esp__title l_block-esp__title-fake">Система хранения вещей</div>
 			<div class="l_block-esp__item-half">
 				<div class="l_block-esp__item-half-inside">
 					<div class="l_block-esp__title">Система хранения вещей</div>
