--- a/dev/_footer.html
+++ b/dev/_footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer" id="block8">
 	<div class="wrapper">
 		<div class="footer_left">
 			<div class="footer_logo">
