--- a/dev/_header.html
+++ b/dev/_header.html
@@ -22,11 +22,7 @@
 	<script src="js/slick.js"></script>
 	<script src="js/nouislider.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
-
-
 	<script src="js/ready.js"></script>
-
-
 
 
 	<script src="js/imagesloaded.pkgd.min.js"></script>
@@ -52,23 +48,29 @@
 </head>
 <body>
 	<div class="header">
-		<!-- <div class="header_imgs" data-intensity="-0.65" data-speedIn="1.2" data-speedOut="1.2" data-easing="power2.easeInOut" data-displacement="img/disp.jpg" data-hover="false">
-			<img src="img/header2.jpg" alt="" style="">
-			<img src="img/header.jpg" alt="" style="">
-		</div>
- -->
 		<div class="wrapper">
-			<div class="header_top">
-				<div class="row">
-					<div class="col-4 off-8">
-						<div class="header_top__right">
-							<div class="header_phone">+7 (812) 331-2000</div>
-							<div class="header_slogan">Сдача в III квартале <br>2019 года</div>
-						</div>
-					</div>
+			<div class="m_menu">
+				<a href="javascript:;" class="m_menu__toggle"></a>
+
+				<div class="m_menu__block">
+					<ul class="m_menu__list">
+						<li class="m_menu__item"><a href="#block1" class="m_menu__link scrollto">Инфраструктура <br>и транспортная <br>доступность</a></li>
+						<li class="m_menu__item"><a href="#block2" class="m_menu__link scrollto">Окружение <br>и среда обитания</a></li>
+						<li class="m_menu__item"><a href="#block3" class="m_menu__link scrollto">Архитектура <br>и дизайн</a></li>
+						<li class="m_menu__item"><a href="#block4" class="m_menu__link scrollto">Технические <br>характеристики</a></li>
+						<li class="m_menu__item"><a href="#block5" class="m_menu__link scrollto">Подбор квартиры</a></li>
+						<li class="m_menu__item"><a href="#block6" class="m_menu__link scrollto">Ход строительных <br>работ</a></li>
+						<li class="m_menu__item"><a href="#block7" class="m_menu__link scrollto">О компании</a></li>
+						<li class="m_menu__item"><a href="#block8" class="m_menu__link scrollto">Контакты</a></li>
+					</ul>
+					<a href="javascritpt:;" class="m_menu__close"></a>
 				</div>
+					
 			</div>
 
+			<div class="header_phone">+7 (812) 331-2000</div>
+			<div class="header_slogan">Сдача в III квартале <br>2019 года</div>
+	
 
 			<div class="header_btn_wrap header_btn_wrap-1">
 				<a href="javascript: ;" class="header_btn header_btn-green" data-toggle="modal" data-target="#modal_present">Запись на презентацию</a>
@@ -81,6 +83,7 @@
 			<div class="header_soc">
 				<a href="" class="header_soc__link"><img src="img/footer_vk.png" alt=""></a>
 				<a href="" class="header_soc__link"><img src="img/footer_insta.png" alt=""></a>
+				<br>
 				<a href="" class="header_soc__link"><img src="img/footer_fb.png" alt=""></a>
 				<a href="" class="header_soc__link"><img src="img/footer_yt.png" alt=""></a>
 			</div>
@@ -89,12 +92,12 @@
 
 		<nav class="header_nav">
 			<ul class="header_nav__list">
-				<li class="header_nav__item"><a href="#block1" class="header_nav__link scrollto">Окружение</a></li>
-				<li class="header_nav__item"><a href="#block2" class="header_nav__link scrollto">Архитектура</a></li>
-				<li class="header_nav__item"><a href="#block3" class="header_nav__link scrollto">Тех.характеристики</a></li>
-				<li class="header_nav__item"><a href="#block4" class="header_nav__link scrollto">Ход строительства</a></li>
+				<li class="header_nav__item"><a href="#block1" class="header_nav__link scrollto">Инфраструктура</a></li>
+				<li class="header_nav__item"><a href="#block2" class="header_nav__link scrollto">Окружение</a></li>
+				<li class="header_nav__item"><a href="#block3" class="header_nav__link scrollto">Архитектура</a></li>
+				<li class="header_nav__item"><a href="#block4" class="header_nav__link scrollto">Тех.характеристики</a></li>
 				<li class="header_nav__item"><a href="#block5" class="header_nav__link scrollto">Подбор квартиры</a></li>
-				<li class="header_nav__item"><a href="#block6" class="header_nav__link scrollto">Инфраструктура</a></li>
+				<li class="header_nav__item"><a href="#block6" class="header_nav__link scrollto">Ход строительства</a></li>
 				<li class="header_nav__item"><a href="#block7" class="header_nav__link scrollto">О компании</a></li>
 				<li class="header_nav__item"><a href="#block8" class="header_nav__link scrollto">Контакты</a></li>
 			</ul>
