--- a/dev/index.html
+++ b/dev/index.html
@@ -1,13 +1,13 @@
 //= _header.html
 
 
-<div class="l_block l_block-top" id="block1">
+<div class="l_block l_block-top">
 	<div class="wrapper">
 		<div class="txt">
 			<p>Компания «Строительный трест» представляет новый жилой комплекс «Сосновка», Тореза, 77 ─ проект, в котором воплощен 25-летний опыт компании и лучшие традиции кирпичного домостроения.</p>
 		</div>
 
-		<div class="l_block-top_block l_block-top_block-1">
+		<div id="block1" class="l_block-top_block l_block-top_block-1">
 			<h2 class="l_block-top_block__title">Жилой комплекс бизнес-класса</h2>
 
 			<div class="l_block-top_block__list">
@@ -262,7 +262,7 @@
 
 
 
-<div class="l_block l_block-arh" id="block5">
+<div class="l_block l_block-arh" id="block3">
 	<div class="wrapper">
 		<h2>Архитектура и дизайн</h2>
 	</div>
@@ -344,14 +344,14 @@
 
 
 
-<div class="l_block l_block-esp" id="block6">
+<div class="l_block l_block-esp" >
 	<div class="wrapper">
 		<h2>Отличнительные особенности</h2>
 	</div>
 
 	<div class="l_block-esp__list">
 		<div class="l_block-esp__item">
-			<div class="l_block-esp__title l_block-esp__title-fake">Квартиры с террасами</div>
+			<!-- <div class="l_block-esp__title l_block-esp__title-fake">Квартиры с террасами</div> -->
 			<div class="l_block-esp__item-half">
 				<img src="img/esp1.jpg" alt="" class="l_block-esp__img">
 			</div>
@@ -372,7 +372,7 @@
 		</div>
 
 		<div class="l_block-esp__item">
-			<div class="l_block-esp__title l_block-esp__title-fake">Система хранения вещей</div>
+			<!-- <div class="l_block-esp__title l_block-esp__title-fake">Система хранения вещей</div> -->
 			<div class="l_block-esp__item-half">
 				<div class="l_block-esp__item-half-inside">
 					<div class="l_block-esp__title">Система хранения вещей</div>
@@ -395,7 +395,7 @@
 
 
 
-<div class="l_block l_block-big">
+<div class="l_block l_block-big" id="block4">
 	<div class="l_block-big_top">
 		<div class="wrapper">
 			<h2>Технические характеристики</h2>
@@ -452,7 +452,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="l_block-big_bottom">
+	<div class="l_block-big_bottom" id="block5">
 		<div class="wrapper">
 			<h2>Подбор квартиры</h2>
 
@@ -759,7 +759,7 @@
 
 
 
-<div class="l_block l_block-photo">
+<div class="l_block l_block-photo" id="block6">
 	<div class="wrapper">
 		<h2>Ход строительных работ</h2>
 
@@ -937,7 +937,7 @@
 
 
 
-<div class="l_block l_block-text">
+<div class="l_block l_block-text" id="block7">
 	<div class="wrapper">
 		<h2>О компании</h2>
 
